added the form for the seach bar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
     </nav>
 
     <div class="container">
+        <div class="row p-3">
+            <div class="card col-md-8">
+                <div class="card-header">
+                    <h3>Where are we going?</h3>
+                </div>
 
+                <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="destination">Destination</label>
+                            <input type="text" class="form-control" id="destination" placeholder='WHERE YOU ARE GOING?'>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="start">Start Date</label>
+                                <input type="text" class="form-control" id="start" placeholder="MM/DD/YYYY">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="end">Password</label>
+                                <input type="text" class="form-control" id="end" placeholder="MM/DD/YYYY">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>
 
     </div>
 
