added submit button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                                 <input type="text" class="form-control" id="end" placeholder="MM/DD/YYYY">
                             </div>
                         </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
             </div>
