--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src= "assets/javascript/firebase.js"></script>
 </body>
 
 </html>
