--- a/travel.html
+++ b/travel.html
@@ -86,7 +86,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!-- ===== MOMENT CDN =====  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/javascript/index.js"></script>
+    <!--<script src="assets/javascript/index.js"></script>-->
     <script src="assets/javascript/travel.js"></script>
     <script src="assets/javascript/favorites.js"></script>
     
