--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
                 <div class="card-body">
                     <div id="info">
+
+                            <div class="form-group">
+                                    <label for="startDest">Starting Place</label>
+                                    <input type="text" class="form-control" id="startDest" placeholder='I AM FROM ...'>
+                                </div>
                     
                         <div class="form-group">
                             <label for="destination">Destination</label>
