--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Project 1</title>
+    <title>Project Destination</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <script src="https://kit.fontawesome.com/f98cc017d1.js"></script>
     <!-- ===== BOOTSTRAP CDN ===== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,45 +15,49 @@
 
 <body>
     <!-- ===== MAIN NAVIGATION BAR =====  -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="./index.html">
-            <img src="./assets/images/logo.png" width="50" height="50"
-                class="d-inline-block align-top" alt="logo">
-        </a>
+    <div class="wrapper mb-3">
+        <div class="container-fluid bg-primary p-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./assets/images/logo.png" width="50" height="50"
+                        class="d-inline-block align-top" alt="logo">
+                </a>
 
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./travel.html">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
-                <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
-            </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="./index.html">Home</a>
+                        <a class="nav-item nav-link" href="./travel.html">Features</a>
+                        <a class="nav-item nav-link" href="#">Pricing</a>
+                        <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
+                    </div>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
     <!-- ===== CONTAINER FORM FOR USER REQUESTS ===== -->
-    <div class="container">
-        <div class="row p-3">
+    <div class="container mb-3">
+        <div class="row d-flex justify-content-center p-3">
             <div class="card col-md-8">
                 <div class="card-header">
-                    <h3>Where are we going?</h3>
+                    <h3>Let Us Find Your Destination!</h3>
                 </div>
 
                 <div class="card-body">
                     <div id="info">
                     
                         <div class="form-group">
-                            <label for="destination">Destination</label>
-                            <input type="text" class="form-control" id="destination" placeholder='WHERE YOU ARE GOING?'>
+                            <label for="destination">Going to</label>
+                            <input type="text" class="form-control" id="destination" placeholder="Destination">
                         </div>
 
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="start">Start Date</label>
-                                <input type="text" class="form-control" id="start" placeholder="MM/DD/YYYY">
+                                <input type="date" class="form-control" id="start" placeholder="MM/DD/YYYY">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="end">End Date</label>
-                                <input type="text" class="form-control" id="end" placeholder="MM/DD/YYYY">
+                                <input type="date" class="form-control" id="end" placeholder="MM/DD/YYYY">
                             </div>
                         </div>
                         <!-- ===== SEARCH BUTTON FOR USER REQUESTS =====  -->
