added a coming from to the form in index.html and also pushed it to firebase

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="container-fluid bg-primary p-0">
             <nav class="navbar navbar-expand-lg navbar-light bg-primary">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./assets/images/logo.png" width="50" height="50"
-                        class="d-inline-block align-top" alt="logo">
+                    <img src="./assets/images/logo.png" width="50" height="50" class="d-inline-block align-top"
+                        alt="logo">
                 </a>
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
@@ -44,7 +44,11 @@
 
                 <div class="card-body">
                     <div id="info">
-                    
+                        <div class="form-group">
+                            <label for="startPlace">Coming from</label>
+                            <input type="text" class="form-control" id="startPlace" placeholder="Starting">
+                        </div>
+
                         <div class="form-group">
                             <label for="destination">Going to</label>
                             <input type="text" class="form-control" id="destination" placeholder="Destination">
@@ -61,9 +65,9 @@
                             </div>
                         </div>
                         <!-- ===== SEARCH BUTTON FOR USER REQUESTS =====  -->
-                        <a href="./travel.html" id ="searchButton" class="btn btn-primary">Search</a>
+                        <a href="./travel.html" id="searchButton" class="btn btn-primary">Search</a>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -72,11 +76,9 @@
     </div>
 
     <!-- ===== JQUERY CDN ===== -->
-    <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+        </script>
     <!-- ===== POPPER.JS CDN ===== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
