added some styling to index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </nav>
         </div>
     </div>
+
     <!-- ===== CONTAINER FORM FOR USER REQUESTS ===== -->
     <div class="container mb-3">
         <div class="row d-flex justify-content-center p-3">
@@ -67,13 +68,11 @@
                         <!-- ===== SEARCH BUTTON FOR USER REQUESTS =====  -->
                         <a href="./travel.html" id="searchButton" class="btn btn-primary">Search</a>
                     </div>
-
                 </div>
             </div>
-
         </div>
-
     </div>
+
 
     <!-- ===== JQUERY CDN ===== -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -92,6 +91,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!-- ===== MOMENT CDN =====  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- ===== JAVASCRIPT FILES ===== -->
     <script src="assets/javascript/index.js"></script>
     <script src="assets/javascript/travel.js"></script>
     <script src="assets/javascript/favorites.js"></script>
