--- a/travel.html
+++ b/travel.html
@@ -15,7 +15,6 @@
 
 <body>
     <!-- ===== MAIN NAVIGATION BAR =====  -->
-    <!-- ===== MAIN NAVIGATION BAR =====  -->
     <div class="wrapper mb-3">
         <div class="container-fluid bg-primary p-0">
             <nav class="navbar navbar-expand-lg navbar-light bg-primary">
@@ -43,46 +42,39 @@
         <button type="button" class="btn btn-light">Food</button>
     </div>
 
+    <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
+    <div class="container"> 
+        <div class="row" id="weather-data" style="width: 20rem; height: 200px">
+                
+        </div>
+    </div>
+        
     <!-- ===== CONTAINER FOR DATA OUTPUT HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
-    <div class="container">
-        <div class="row p-3">
-            <div class="card col-md-12">
-                <div class="card-header">
-                    <h3>Flight/Hotel/Food Information</h3>
-                </div>
-                <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
-                <div class="container">
-
-                    <div class="row" style="width: 20rem; height: 200px"></div>
-                </div>
 
 
 
 
 
-
-                <!-- ===== JQUERY CDN ===== -->
-                <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-                    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
-                    </script>
-                <!-- ===== POPPER.JS CDN ===== -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                    crossorigin="anonymous">
-                    </script>
-                <!-- ===== BOOTSTRAP/JS CDN ===== -->
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                    crossorigin="anonymous">
-                    </script>
-                <!-- ===== FIREBASE CDNs ===== -->
-                <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
-                <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-                <!-- ===== MOMENT CDN =====  -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-                <script src="assets/javascript/index.js"></script>
-                <script src="assets/javascript/travel.js"></script>
-                <script src="assets/javascript/favorites.js"></script>
+    <!-- ===== JQUERY CDN ===== -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+        </script>
+    <!-- ===== POPPER.JS CDN ===== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous">
+        </script>
+    <!-- ===== BOOTSTRAP/JS CDN ===== -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous">
+        </script>
+    <!-- ===== FIREBASE CDNs ===== -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <!-- ===== MOMENT CDN =====  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/javascript/travel.js"></script>
 
 </body>
 
