finished converting the date and temperature

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Project Destination</title>
+    <title>Project-1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -19,7 +19,7 @@
         <div class="container-fluid bg-primary p-0">
             <nav class="navbar navbar-expand-lg navbar-light bg-primary">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./assets/images/logo.png" width="50" height="50" class="d-inline-block align-top"
+                    <img src="./assets/images/hangrylogo.png" width="75" height="75" class="d-inline-block align-top"
                         alt="logo">
                 </a>
 
