--- a/travel.html
+++ b/travel.html
@@ -16,7 +16,7 @@
 <body>
     <!-- ===== MAIN NAVIGATION BAR =====  -->
     <div class="wrapper">
-        <div class="container-fluid bg-primary mb-5 p-0" id="global-header">
+        <div class="container-fluid bg-primary mb-2 p-0" id="global-header">
             <nav class="navbar navbar-expand-lg navbar-light bg-primary">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./assets/images/hangrylogo.png" width="75" height="75" class="d-inline-block align-top"
@@ -42,7 +42,7 @@
         </div>
 
         <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
-        <div class="row" id="weather-data">
+        <div class="row d-flex justify-content-end" id="weather-data">
                 
         </div>
             
