put ids into the travel page

--- a/travel.html
+++ b/travel.html
@@ -36,9 +36,9 @@
 
         <!-- ===== CONTAINER FOR USER REQUESTED HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
         <div class="container d-flex justify-content-center mb-3">
-            <button type="button" class="btn btn-light mr-3">Flights</button>
-            <button type="button" class="btn btn-light mr-3">Hotels</button>
-            <button type="button" class="btn btn-light">Food</button>
+            <button type="button" class="btn btn-light mr-3" id="flightbtn">Flights</button>
+            <button type="button" class="btn btn-light mr-3" id="hotelbtn">Hotels</button>
+            <button type="button" class="btn btn-light" id="foodbtn">Food</button>
         </div>
 
         <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
