--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="./index.html">Home</a>
                         <a class="nav-item nav-link" href="./travel.html">Features</a>
-                        <a class="nav-item nav-link" href="#">Pricing</a>
                         <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
                     </div>
                 </div>
@@ -38,7 +37,7 @@
 
         <!-- ===== CONTAINER FORM FOR USER REQUESTS ===== -->
         <div class="row d-flex justify-content-center mb-5 p-3 animated fadeIn" id="main-content-container">
-            <div class="card col-md-8 my-3 animated zoomIn delay-2s" id="main-form">
+            <div class="card col-md-8 my-3 animated zoomIn" id="main-form">
                 <div class="d-flex justify-content-center main-form-header py-2">
                     <h2>Let Us Find Your Destination!</h2>
                 </div>
@@ -48,26 +47,26 @@
                     <div id="info">
                         <div class="form-group">
                             <label for="startPlace">Coming from</label>
-                            <input type="text" class="form-control" id="startPlace" placeholder="Starting">
+                            <input type="text" class="form-control" id="startPlace" placeholder="Starting" required>
                         </div>
 
                         <div class="form-group">
                             <label for="destination">Going to</label>
-                            <input type="text" class="form-control" id="destination" placeholder="Destination">
+                            <input type="text" class="form-control" id="destination" placeholder="Destination" required>
                         </div>
 
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="start">Start Date</label>
-                                <input type="date" class="form-control" id="start" placeholder="MM/DD/YYYY">
+                                <input type="date" class="form-control" id="start" placeholder="MM/DD/YYYY" required>
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="end">End Date</label>
-                                <input type="date" class="form-control" id="end" placeholder="MM/DD/YYYY">
+                                <input type="date" class="form-control" id="end" placeholder="MM/DD/YYYY" required>
                             </div>
                         </div>
                         <!-- ===== SEARCH BUTTON FOR USER REQUESTS =====  -->
-                        <a href="./travel.html" id="searchButton" class="btn btn-primary">Search</a>
+                        <a id="searchButton" class="btn btn-primary">Search</a>
                     </div>
                 </div>
             </div>
