pushing changes to index.html and travel.html

--- a/travel.html
+++ b/travel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Project-1</title>
+    <title>The Hangry Traveler</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,7 +41,7 @@
         </div>
 
         <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
-        <div class="row d-flex justify-content-end" id="weather-data">
+        <div class="row" id="weather-data">
 
         </div>
 
