--- a/travel.html
+++ b/travel.html
@@ -47,11 +47,12 @@
         </div>
 
         <!-- ===== CONTAINER FOR DATA OUTPUT HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
+        <div class="container">
+            <div class="row" id="infoBox">
 
-        <div class="row" id="infoBox">
 
+            </div>
         </div>
-
     </div>
 
 
