pushing current changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Project-1</title>
+    <title>The Hangry Traveler</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="./index.html">Home</a>
-                        <a class="nav-item nav-link" href="./travel.html">Features</a>
+                        <a class="nav-item nav-link" href="./travel.html">Travel Info</a>
                         <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
                     </div>
                 </div>
