--- a/favorites.html
+++ b/favorites.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="./index.html">Home</a>
-                        <a class="nav-item nav-link" href="./travel.html">Features</a>
+                        <a class="nav-item nav-link" href="./travel.html">Travel Info</a>
                         <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
                     </div>
                 </div>
