--- a/travel.html
+++ b/travel.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="./index.html">Home</a>
-                        <a class="nav-item nav-link" href="./travel.html">Features</a>
+                        <a class="nav-item nav-link" href="./travel.html">Travel Info</a>
                         <a class="nav-item nav-link" href="./favorites.html">Favorites</a>
                     </div>
                 </div>
@@ -35,9 +35,11 @@
 
         <!-- ===== CONTAINER FOR USER REQUESTED HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
         <div class="container d-flex justify-content-center mb-3">
-            <button type="button" class="btn btn-light mr-3" id="flightbtn">Flights</button>
-            <button type="button" class="btn btn-light mr-3" id="hotelbtn">Hotels</button>
-            <button type="button" class="btn btn-light" id="foodbtn">Food</button>
+            <div class="row" id="btnInfoRow">
+                <button type="button" class="btn btn-light mr-3" id="flightbtn">Flights</button>
+                <button type="button" class="btn btn-light mr-3" id="hotelbtn">Hotels</button>
+                <button type="button" class="btn btn-light" id="foodbtn">Food</button>
+            </div>
         </div>
 
         <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
