added hover effects on buttons in travel.html

--- a/travel.html
+++ b/travel.html
@@ -36,9 +36,9 @@
         <!-- ===== CONTAINER FOR USER REQUESTED HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
         <div class="container d-flex justify-content-center mb-3">
             <div class="row" id="btnInfoRow">
-                <button type="button" class="btn btn-light mr-3" id="flightbtn">Flights</button>
-                <button type="button" class="btn btn-light mr-3" id="hotelbtn">Hotels</button>
-                <button type="button" class="btn btn-light" id="foodbtn">Food</button>
+                <button type="button" class="btn btn-tabs btn-light mr-3" id="flightbtn">Flights</button>
+                <button type="button" class="btn btn-tabs btn-light mr-3" id="hotelbtn">Hotels</button>
+                <button type="button" class="btn btn-tabs btn-light" id="foodbtn">Food</button>
             </div>
         </div>
 
