working on fixing the width of the main wrapper

--- a/favorites.html
+++ b/favorites.html
@@ -37,13 +37,13 @@
             <div class="btn-group">
                 <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"           aria-expanded="false">Favorites
                 </button>
-                <div class="dropdown-menu">...</div>
+                <div class="dropdown-menu" id="favorited"></div>
             </div>
 
             <div class="btn-group">
                 <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"            aria-expanded="false">Recent Searches
                 </button>
-                <div class="dropdown-menu">...</div>
+                <div class="dropdown-menu" id="recentSearches"></div>
             </div>
         </div>
         <!-- ===== PUSHES THE FOOTER DOWN ===== -->
