--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- ===== CONTAINER FORM FOR USER REQUESTS ===== -->
-        <div class="row d-flex justify-content-center mb-5 p-3 animated fadeIn" id="main-content-container">
+        <div class="row d-flex justify-content-center mb-5 animated fadeIn" id="main-content-container">
             <div class="card col-md-8 my-3 animated zoomIn" id="main-form">
                 <div class="d-flex justify-content-center main-form-header py-2">
                     <h2>Let Us Find Your Destination!</h2>
@@ -71,6 +71,7 @@
                 </div>
             </div>
         </div>
+
         <!--SEARCH BUTTON MODAL -->
         <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </div>
+
         <!-- ===== PUSHES THE FOOTER DOWN ===== -->
         <div class="push"></div>
     </div>
