--- a/travel.html
+++ b/travel.html
@@ -47,6 +47,8 @@
 
         </div>
 
+        <div class="clearfix"></div>
+        
         <!-- ===== CONTAINER FOR DATA OUTPUT HOTEL/FLIGHTS/RESTAURANT INFORMATION ===== -->
         <div class="container">
             <div class="row" id="infoBox">
