--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 <body>
     <!-- ===== MAIN NAVIGATION BAR =====  -->
     <div class="wrapper">
-        <div class="container-fluid animated slideInDown bg-primary mb-5 p-0" id="global-header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <div class="container-fluid bg-primary mb-5 p-0" id="global-header">
+            <nav class="navbar navbar-expand-md navbar-light bg-primary">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./assets/images/hangrylogo.png" width="75" height="75" class="d-inline-block align-top"
-                        alt="logo">
+                    alt="logo">
                 </a>
-
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <!-- ===== Hamburger Menu ===== -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" id="toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="./index.html">Home</a>
                         <a class="nav-item nav-link" href="./travel.html">Travel Info</a>
@@ -99,7 +102,7 @@
     <!-- ===== FOOTER ===== -->
     <div class="container-fluid global-footer animated slideInUp">
         <footer class="footer">
-            <p>Copyright &copy;</p>
+            <p>Copyright &copy; The Hangry Traveler</p>
         </footer>
     </div>
 
