working on travel.html styling

--- a/favorites.html
+++ b/favorites.html
@@ -59,7 +59,7 @@
     <!-- ===== FOOTER ===== -->
     <div class="container-fluid global-footer">
         <footer class="footer">
-            <p>Copyright &copy;</p>
+            <p>&copy; The Hangry Traveler</p>
         </footer>
     </div>
 
