--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+    <!-- ===== FONT AWESOME KIT ===== -->
     <script src="https://kit.fontawesome.com/f98cc017d1.js"></script>
     <!-- ===== BOOTSTRAP CDN ===== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -103,7 +104,7 @@
     <!-- ===== FOOTER ===== -->
     <div class="container-fluid global-footer animated slideInUp">
         <footer class="footer">
-            <p>Copyright &copy; The Hangry Traveler</p>
+            <p>&copy; The Hangry Traveler</p>
         </footer>
     </div>
 
