travel.html responsive

--- a/travel.html
+++ b/travel.html
@@ -58,6 +58,8 @@
         </div>
     </div>
 
+    <div class="push"></div>
+
     <!-- ===== FOOTER ===== -->
     <div class="container-fluid global-footer">
         <footer class="footer">
