--- a/travel.html
+++ b/travel.html
@@ -23,10 +23,11 @@
             <nav class="navbar navbar-expand-md navbar-light bg-primary">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./assets/images/hangrylogo.png" width="75" height="75" class="d-inline-block align-top"
-                    alt="logo">
+                        alt="logo">
                 </a>
                 <!-- ===== Hamburger Menu ===== -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -45,7 +46,7 @@
             <button type="button" class="btn btn-tabs btn-light mr-3" id="hotelbtn">Hotels</button>
             <button type="button" class="btn btn-tabs btn-light" id="foodbtn">Food</button>
         </div>
-        
+
         <!-- ===== WEATHER FORECAST FOR CITY REQUESTED ===== -->
         <div class="weather-container">
             <div class="fiveDayForecast"><i class="fas fa-sun"></i> 5-Day Forecast</div>
