added favorite buttons for hotels and food

--- a/favorites.html
+++ b/favorites.html
@@ -39,22 +39,21 @@
         <!-- ===== DROPDOWN MENUS FOR THE FAVORITED AND PREVIOUSLY SEARCHED BUTTONS ===== -->
         <div class="row favorites-row">
             <div class="btn-group">
-                <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"           aria-expanded="false">Favorites
+                <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"           aria-expanded="false">Favorited Hotels
                 </button>
                 <div class="dropdown-menu" id="favorited"></div>
             </div>
 
             <div class="btn-group">
-                <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"            aria-expanded="false">Recent Searches
+                <button class="btn btn-secondary btn-lg dropdown-toggle favorites" type="button" data-toggle="dropdown" aria-haspopup="true"            aria-expanded="false">Favorited Restaurants
                 </button>
                 <div class="dropdown-menu" id="recentSearches"></div>
             </div>
         </div>
+
         <!-- ===== PUSHES THE FOOTER DOWN ===== -->
         <div class="push"></div>
     </div>
-
-
 
     <!-- ===== FOOTER ===== -->
     <div class="container-fluid global-footer">
