finish favorite page

--- a/favorites.html
+++ b/favorites.html
@@ -42,6 +42,9 @@
             <button type="button" class="btn btn-tabs btn-light" id="foodFavBtn">Restaurant Favorites</button>
         </div>
 
+        <div class="container-api">
+            <div class="row" id="infoBox"></div>
+        </div>
         <!-- ===== PUSHES THE FOOTER DOWN ===== -->
         <div class="push"></div>
     </div>
