fav page responsive and styled

--- a/travel.html
+++ b/travel.html
@@ -59,6 +59,17 @@
         </div>
     </div>
 
+    <!-- ===== MODAL FOR WHEN USER CLICKS THE FAVORITED HEART BUTTON ===== -->
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>Added to favorites.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="push"></div>
 
     <!-- ===== FOOTER ===== -->
