modal now has animation

--- a/travel.html
+++ b/travel.html
@@ -59,17 +59,6 @@
         </div>
     </div>
 
-    <!-- ===== MODAL FOR WHEN USER CLICKS THE FAVORITED HEART BUTTON ===== -->
-    <div class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <p>Added to favorites.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="push"></div>
 
     <!-- ===== FOOTER ===== -->
@@ -77,6 +66,17 @@
         <footer class="footer">
             <p>&copy; The Hangry Traveler</p>
         </footer>
+    </div>
+
+    <!-- ===== MODAL FOR WHEN USER CLICKS THE FAVORITED HEART BUTTON ===== -->
+    <div class="modal fade" id="favorites-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>Added to favorites.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- ===== JQUERY CDN ===== -->
