--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <!--SEARCH BUTTON MODAL -->
-        <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -88,7 +88,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Please include missing information.</p>
+                        <p>Please complete all fields.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
